--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ pydantic_core==2.23.4
 pydeck==0.9.1
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
+python-docx==1.1.2
 pytz==2024.2
 PyYAML==6.0.2
 referencing==0.35.1
