--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,9 @@ attrs==24.2.0
 blinker==1.8.2
 cachetools==5.5.0
 certifi==2024.8.30
-charset-normalizer==3.4.0
+charset-normalizer==3.3.2
 click==8.1.7
-crewai==0.5.0
+crewai==0.76.2
 dataclasses-json==0.6.7
 distro==1.9.0
 exceptiongroup==1.2.2
@@ -23,30 +23,30 @@ httpcore==1.0.6
 httpx==0.27.2
 idna==3.10
 Jinja2==3.1.4
-jiter==0.6.1
+jiter==0.5.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-langchain==0.1.0
-langchain-community==0.0.20
-langchain-core==0.1.23
-langchain-openai==0.0.2.post1
-langsmith==0.0.87
+jsonschema-specifications==2023.12.1
+langchain==0.3.4
+langchain-community==0.3.3
+langchain-core==0.3.13
+langchain-openai==0.2.3
+langsmith==0.1.137
 markdown-it-py==3.0.0
-MarkupSafe==3.0.2
+MarkupSafe==2.1.5
 marshmallow==3.23.0
 mdurl==0.1.2
 multidict==6.1.0
 mypy-extensions==1.0.0
-narwhals==1.11.0
+narwhals==1.8.4
 numpy==1.26.4
 openai==1.52.2
-packaging==23.2
+packaging==24.1
 pandas==2.2.3
 pillow==10.4.0
 propcache==0.2.0
-protobuf==5.28.3
+protobuf==4.25.5
 pyarrow==17.0.0
 pydantic==2.9.2
 pydantic_core==2.23.4
@@ -59,16 +59,16 @@ PyYAML==6.0.2
 referencing==0.35.1
 regex==2024.9.11
 requests==2.32.3
-rich==13.9.3
+rich==13.8.1
 rpds-py==0.20.0
-setuptools==74.1.2
+setuptools==75.2.0
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
 SQLAlchemy==2.0.36
-streamlit==1.39.0
-tenacity==8.5.0
-tiktoken==0.5.2
+streamlit==1.38.0
+tenacity==9.0.0
+tiktoken==0.7.0
 toml==0.10.2
 tornado==6.4.1
 tqdm==4.66.5
