--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
-langchain==0.1.0
+langchain>=0.2.16
 langchain-community==0.0.20
 langchain-core==0.1.23
 langchain-openai==0.0.2.post1
