--- a/requirements.txt
+++ b/requirements.txt
@@ -28,9 +28,9 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
-langchain>=0.2.16
+langchain==0.2.17
 langchain-community==0.0.20
-langchain-core==0.1.23
+langchain-core>=0.2.38,<0.3.0
 langchain-openai==0.0.2.post1
 langsmith==0.0.87
 markdown-it-py==3.0.0
