--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ langchain==0.2.17
 langchain-community==0.0.20
 langchain-core>=0.2.38,<0.3.0
 langchain-openai==0.0.2.post1
-langsmith==0.0.87
+langsmith>=0.1.17,<0.2.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.23.0
