--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 langchain==0.3.4
 langchain-core<0.4.0,>=0.3.0
-langchain-openai==0.0.2.post1
+langchain-openai==0.2.3
 langsmith>=0.1.17,<0.2.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
